cambios en Index para ver si funciona

--- a/PruebaConGit/web/index.xhtml
+++ b/PruebaConGit/web/index.xhtml
@@ -8,6 +8,7 @@
     <h:body>
         Hello from Facelets
        Estoy haciendo puebas en el index
+       veamos si funciona
     </h:body>
 </html>
 
